--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "license": "MIT",
   "dependencies": {
     "font-awesome": "^4.7.0",
-    "react": "^16.1.0",
+    "react": "^16.13.1",
     "react-dom": "^16.1.0",
-    "react-redux": "^5.0.6",
-    "react-scripts-ts": "2.8.0",
-    "redux": "^3.7.2"
+    "react-redux": "^7.2.0",
+    "react-scripts-ts": "3.1.0",
+    "redux": "^4.0.5",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -19,11 +20,11 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/jest": "^21.1.6",
-    "@types/node": "^8.0.51",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.13.2",
     "@types/react": "^16.0.22",
     "@types/react-dom": "^16.0.3",
-    "@types/react-redux": "^5.0.12",
+    "@types/react-redux": "^7.1.7",
     "@types/redux": "^3.6.0"
   },
   "homepage": "https://ts-minesweeper.surge.sh"
